--- a/pathfind/package.json
+++ b/pathfind/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.11",
-    "@mantine/hooks": "^6.0.11",
+    "@mantine/hooks": "^6.0.13",
     "@tabler/icons-react": "^2.21.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "circular-json-es6": "^2.0.2",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
