--- a/pathfind/package.json
+++ b/pathfind/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.11",
     "@mantine/hooks": "^6.0.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.21.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-scripts": "^5.0.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
